# WebAnts

./: .gitignore  pyproject.toml  readme.cn.md  readme.md  requirements.txt  setup.py
example/: use_item.py
tests/: conftest.py  test_downloader.py  test_extractor.py  test_item.py  test_parser.py  test_result.py  test_scheduler.py
webants/: downloader.py  parser.py  scheduler.py  spider.py
webants/libs/: __init__.py  config.py  exceptions.py  extractor.py  item.py  middleware.py  persister.py  request.py  response.py  result.py  signals.py
webants/utils/: __init__.py  logger.py  login.py  misc.py  statistic.py  url.py
