[project]
name = "webants"
version = "0.1.0"
description = "A simple asynchronous web crawler framework implemented using httpx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.1",
    "cssselect>=1.3.0",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "multidict>=6.1.0",
    "pydantic>=2.11.3",
    "setuptools>=75.6.0",
    "ujson>=5.10.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.51.0",  # Playwright
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
# Disable warnings system because it interferes with the logger warning capture.
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
