[project]
name = "webants"
version = "0.1.0"
description = "A simple asynchronous web crawler framework implemented using httpx"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4.1",
    "cssselect>=1.3.0",
    "httpx>=0.28.1",
    "lxml>=5.3.0",
    "multidict>=6.1.0",
    "pydantic>=2.11.3",
    "setuptools>=75.6.0",
    "ujson>=5.10.0",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.51.0",  # Playwright
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest.ini_options]
# Disable warnings system because it interferes with the logger warning capture.
asyncio_default_fixture_loop_scope = "function"
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--asyncio-mode=auto",  
    "--cov-report=term-missing"  
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

# Configure logging during tests
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]
